[metadata]
name = cast_cli
url = https://github.com/Julian/cast-cli
description =
long_description = file: README.rst
author = Julian Berman
author_email = Julian+cast_cli@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    click

[options.entry_points]
console_scripts =
    cast = cast_cli._cli:main

[bdist_wheel]
universal = 1

[flake8]
exclude = cast_cli/__init__.py
